--- a/app.movie/src/main/res/layout/movie_app_bar_main.xml
+++ b/app.movie/src/main/res/layout/movie_app_bar_main.xml
@@ -27,59 +27,81 @@
                 app:contentInsetStart="0.0dp"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/movie_ToolbarStyle">
-
-            <FrameLayout
-                    android:id="@+id/ll_title_menu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp">
-
-                <ImageView
-                        android:id="@+id/iv_title_menu"
-                        android:layout_width="23dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:src="@drawable/titlebar_menu"/>
-            </FrameLayout>
-
-            <HorizontalScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center">
-
-                <LinearLayout
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <FrameLayout
+                        android:id="@+id/ll_title_menu"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        app:theme="@style/movie_AppTheme">
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp">
 
                     <ImageView
-                            android:id="@+id/iv_title_one"
-                            android:layout_width="55dp"
+                            android:id="@+id/iv_title_menu"
+                            android:layout_width="23dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            android:src="@drawable/movie_titlebar_music"/>
+                            android:src="@drawable/titlebar_menu"/>
+                </FrameLayout>
 
-                    <ImageView
-                            android:id="@+id/iv_title_two"
-                            android:layout_width="55dp"
+                <HorizontalScrollView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center">
+
+                    <LinearLayout
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:background="?attr/selectableItemBackgroundBorderless"
-                            android:src="@drawable/movie_titlebar_disco"/>
+                            app:theme="@style/movie_AppTheme">
+
+                        <ImageView
+                                android:id="@+id/iv_title_one"
+                                android:layout_width="55dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:src="@drawable/movie_titlebar_music"/>
+
+                        <ImageView
+                                android:id="@+id/iv_title_two"
+                                android:layout_width="55dp"
+                                android:layout_height="match_parent"
+                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:src="@drawable/movie_titlebar_disco"/>
+
+                        <ImageView
+                                android:id="@+id/iv_title_three"
+                                android:layout_width="55dp"
+                                android:layout_height="match_parent"
+                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:src="@drawable/movie_titlebar_friends"/>
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
+                <FrameLayout
+                        android:id="@+id/ll_search_menu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp">
 
                     <ImageView
-                            android:id="@+id/iv_title_three"
-                            android:layout_width="55dp"
-                            android:layout_height="match_parent"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            android:src="@drawable/movie_titlebar_friends"/>
-
-                </LinearLayout>
-
-            </HorizontalScrollView>
+                            android:id="@+id/iv_search_menu"
+                            android:layout_width="23dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:src="@drawable/actionbar_search"/>
+                </FrameLayout>
+            </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
 
